Accordion Design Pattern: Revise Description
Modified the accordion design pattern section of aria-practices.html.
Per feedback from @Decrepidos, made changes proposed and reviewed in issue #501.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -166,8 +166,8 @@
     <section class="widget" id="accordion">
       <h3>Accordion (Sections With Show/Hide Functionality)</h3>
       <p>
-        An accordion is a vertically stacked set of elements, such as labels or thumbnails, that allow the user to toggle the display of sections of content.
-        Each labeling element can be expanded or collapsed to reveal or hide its associated content.
+        An accordion is a vertically stacked set of interactive headings that each contain a title, content snippet, or thumbnail representing a section of content.
+        The headings function as controls that enable users to reveal or hide their associated sections of content.
         Accordions are commonly used to reduce the need to scroll when presenting multiple sections of content on a single page.
       </p>
       <p>Terms for understanding accordions include:</p>
