#540 remove use of aria-selected

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -37,7 +37,7 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="ex1">
         <div class="toolbar" role="toolbar">
-            <div class="toolbar-item selected" role="button" tabindex="0" aria-selected="true">
+            <div class="toolbar-item selected" role="button" tabindex="0">
                 Tool 1
             </div>
             <div class="toolbar-item" role="button" tabindex="-1">Tool 2</div>
