--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -185,7 +185,7 @@
             As a new property, screen reader users may experience varying degrees of support for it.
           </li>
           <li>
-            Applying the <code>aria-modal</code> property to the <code>dialog</code> element 
+            Applying the <code>aria-modal</code> property to the <code>dialog</code> element
             replaces the technique of using <code>aria-hidden</code> on the background for informing assistive technologies that content outside a dialog is inert.
           </li>
           <li>
@@ -272,8 +272,7 @@
 
     <!--  Second modal to open on top of the first modal  -->
     <div id="dialog2" role="dialog" aria-labelledby="dialog2_label"
-      aria-describedby="dialog2_desc" aria-modal="true" class="hidden"
-    >
+      aria-describedby="dialog2_desc" aria-modal="true" class="hidden">
       <h2 id="dialog2_label">Verification Result</h2>
       <div id="dialog2_desc" class="dialog_desc">
         <p tabindex="-1" id="dialog2_para1">This is just a demonstration. If it were a real application, it would
@@ -333,8 +332,7 @@
 
     <!--  Dialog that replaces dialog 1.  -->
     <div id="dialog3" role="dialog" aria-labelledby="dialog3_label"
-      aria-describedby="dialog3_desc" aria-modal="true" class="hidden"
-    >
+      aria-describedby="dialog3_desc" aria-modal="true" class="hidden">
       <h2 id="dialog3_label">Address Added</h2>
       <p id="dialog3_desc" class="dialog_desc">
         The address you provided has been added to your list of delivery addresses. It is ready
@@ -348,8 +346,7 @@
 
     <div id="dialog4" role="dialog" aria-labelledby="dialog4_label"
       aria-describedby="dialog4_desc" class="hidden"
-      aria-modal="true"
-    >
+      aria-modal="true">
       <h2 id="dialog4_label">End of the Road!</h2>
       <p id="dialog4_desc" class="dialog_desc">
         You activated a fake link or button that goes nowhere!
