rename dialog container

--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -224,7 +224,7 @@
       <a href="../../#dialog_modal">Modal Dialog Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
     </nav>
   </div>
-  <div id="dialog_layer">
+  <div class="dialogs">
     <div role="dialog" id="dialog1" aria-labelledby="dialog1_label" aria-modal="true" class="hidden">
       <h2 id="dialog1_label">Add Delivery Address</h2>
       <div class="dialog_form">
