--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -175,8 +175,8 @@
             </td>
             <td>
               <ul>
-                <li>Identifies the <code>img</code> element as a "slider" and overrides the default role of "img".</li>
-                <li>Set on the the movable thumb because it is the operable element that receives focus and represents the slider value.</li>
+                <li>Identifies the <code>img</code> element as a slider.</li>
+                <li>Set on the movable thumb because it is the operable element that receives focus and represents the slider value.</li>
               </ul>
             </td>
           </tr>
