--- a/examples/alert/index.html
+++ b/examples/alert/index.html
@@ -16,6 +16,17 @@
     <script src="js/alert.js" type="text/javascript"></script>
   </head>
   <body>
+  <nav aria-label="Related Links" class="feedback">
+    <details>
+      <summary>Related Links</summary>
+      <ul>
+        <li><a href="../../#browser_and_AT_support">Browser and AT Support</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+        <li>Related Issues (not yet available)</li>
+        <li><a href="../../#alert">Design Pattern</a></li>
+      </ul>
+    </details>
+  </nav>    
     <main>
     <h1>Alert Example</h1>
     <p>
