--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-  <nav aria-label="Related Links">
+  <nav aria-label="Related Links" class="feedback">
     <ul>
       <li><a href="../../#browser_and_AT_support">Browser and AT Support</a></li>
       <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
