bug(toolbar): bad mime type for CSS links

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -228,9 +228,9 @@
   <section>
     <h2>Javascript and CSS Source Code</h2>
     <ul>
-      <li>CSS: <a href="css/toolbar.css" type="tex/css">toolbar.css</a></li>
+      <li>CSS: <a href="css/toolbar.css" type="text/css">toolbar.css</a></li>
       <li>Javascript: <a href="js/toolbar.js" type="text/javascript">toolbar.js</a></li>
-      <li>CSS: <a href="css/menuButton.css" type="stylesheet">menuButton.css</a></li>
+      <li>CSS: <a href="css/menuButton.css" type="text/css">menuButton.css</a></li>
       <li>Javascript: <a href="js/menuButton.js" type="text/javascript">menuButton.js</a></li>
       <li>Javascript: <a href="js/main.js" type="text/javascript">main.js</a></li>
     </ul>
