--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -23,8 +23,8 @@
   <main>
     <h1>Legacy ARIA 1.0 Combobox With Both List and Inline Autocomplete Example</h1>
     <p>
-      <strong>NOTE:</strong> This page is work in progress. Please provide feedback in
-      <a href="https://github.com/w3c/aria-practices/issues/99">issue 99.</a>
+      <strong>NOTE:</strong> Please provide feedback in
+      <a href="https://github.com/w3c/aria-practices/issues/553">issue 553.</a>
     </p>
     <p>
       The below combobox for choosing the name of a US state or territory demonstrates the
@@ -139,8 +139,8 @@
             <th><kbd>Down Arrow</kbd></th>
             <td>
               <ul>
-                <li>If the listbox is displayed. moves visual focus to the first suggested value.</li>
-                <li>If the listbox is not displayed, opens the listbox and moves visual focus to the first value.</li>
+                <li>If the listbox is displayed and a suggestion is selected, moves visual focus to the next suggested value.</li>
+                <li>If the textbox is empty and the listbox is not displayed, opens the listbox and moves visual focus to the first option.</li>
                 <li>In both cases DOM focus remains on the textbox.</li>
               </ul>
             </td>
@@ -149,9 +149,8 @@
             <th><kbd>Up Arrow</kbd></th>
             <td>
               <ul>
-                <li>If the listbox is displayed. moves visual focus to the last suggested value.</li>
-                <li>If the listbox is not displayed, opens the listbox and moves visual focus to the last value.</li>
-                <li>In both cases DOM focus remains on the textbox.</li>
+                <li>If the textbox is empty, first opens the listbox if it is not already displayed and then moves visual focus to the last option.</li>
+                <li>DOM focus remains on the textbox.</li>
               </ul>
             </td>
           </tr>
