ARIA 1.0 Combobox With List Autocomplete Example: Editorial revisions and add review link
For issue #99, modified examples/combobox/aria1.0pattern/combobox-autocomplete-list.html:
1. Remove issue 99 link and replace with link to review issue 554.
2. Minor editorial revisions to keyboard section.

Modified examples/combobox/aria1.0pattern/combobox-autocomplete-both.html:
Minor editorial revision to paragraph at start of keyboard section.

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -122,7 +122,7 @@
     <section>
       <h2 id="kbd_label">Keyboard Support</h2>
       <p>
-      The example comboboxes on this page implement the following keyboard interface.
+      The example combobox on this page implements the following keyboard interface.
         Other variations and options for the keyboard interface are described in the
         <a href="../../../#combobox_kbd_interaction">Keyboard Interaction section of the combobox design pattern.</a>
       </p>
