Setup button pagination for Ex3

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -184,10 +184,13 @@
       <div role="separator" id="ex3_start_sep" aria-labelledby="ex3_start_sep ex3_label" aria-label="Start of"></div>
       <div id="ex3">
         <h4 id="ex3_search_results_label">Search Results for "W3C WAI-ARIA"</h4>
-        <p>Showing results <span id="ex3_start_index">1</span> to <span id="ex3_end_index">5</span> of 19</p>
+        <div class="ex3_result_indices">
+          Showing results <span id="ex3_start_index">1</span> to <span id="ex3_end_index">5</span> of 19
+        </div>
+
         <div role="grid" aria-labelledby="ex3_search_results_label" aria-rowcount="19" data-per-page="5" data-wrap-cols="true">
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/WAI/intro/aria">WAI-ARIA Overview
                   Web Accessibility Initiative W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -196,7 +199,7 @@
               Web content and Web applications more accessible to people with disabilities.</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/states_and_properties">ARIA
                   States and Properties - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -205,7 +208,7 @@
               attributes. However, they are maintained conceptually distinct to clarify subtle ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/">Accessible Rich
                   Internet Applications (WAI-ARIA) 1.0 - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -214,7 +217,7 @@
               Formats Working Group of the Web Accessibility Initiative. The Working ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/WAI/ARIA/">Accessible Rich Internet
                   Applications (ARIA) Working Group - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -223,7 +226,7 @@
               to develop technologies that enhance accessibility of web content for ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-1.1/">Accessible Rich
                   Internet Applications (WAI-ARIA) 1.1 - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -232,7 +235,7 @@
               aria-keyshortcuts , expands roles that can be used in combo boxes, adds a ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/roles">The Roles Model |
                   Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -241,7 +244,7 @@
               and properties of all roles. A formal RDF / OWL representation of all the ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-practices-1.1/">WAI-ARIA
                   Authoring Practices 1.1 - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -250,7 +253,7 @@
               understanding of how to use WAI-ARIA to create an accessible Rich Internet ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/html-aria/">ARIA in HTML - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
               tabindex="-1" role="gridcell"
@@ -258,7 +261,7 @@
               conformance requirements, or terms that this specification module ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/html-aria/">ARIA
                   in HTML</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -267,7 +270,7 @@
               default implicit ARIA semantics is unnecessary and is NOT RECOMMENDED as ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/WAI/ARIA/faq">Accessible Rich
                   Internet Applications (ARIA) Working Group - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -276,7 +279,7 @@
               Accessible Rich Internet Applications Suite. When we add significant ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria-implementation/">WAI-ARIA
                   1.0 User Agent Implementation Guide - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -285,7 +288,7 @@
               as desktop GUI applications by adding metadata to markup technologies ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://w3c.github.io/html-reference/aria/aria.html">ARIA -
                   HTML5 - W3C on GitHub</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -295,7 +298,7 @@
               application ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/WAI/PF/aria-practices/">WAI-ARIA 1.0
                   Authoring Practices - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -304,7 +307,7 @@
               WAI-ARIA [ ARIA ] to create accessible rich internet applications. It described ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/aria-in-html/">Notes on Using
                   ARIA in HTML - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -313,7 +316,7 @@
               especially helps with dynamic content and advanced user interface ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/standards/techs/aria">Accessible
                   Rich Internet Applications (WAI-ARIA) Current Status - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -322,7 +325,7 @@
               to people with disabilities requires semantic information about widgets, ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/WAI/PF/aria/">Accessible Rich
                   Internet Applications (WAI-ARIA) 1.0 - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -331,7 +334,7 @@
               draft: ... This document is part of the WAI-ARIA suite described in the WAI-ARIA ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/introduction">Introduction
                   | Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -341,7 +344,7 @@
               document ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/wai-aria/usage">Using WAI-ARIA |
                   Accessible Rich Internet Applications (WAI-ARIA) 1.0</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -350,7 +353,7 @@
               element) and states and properties supported by the roles. Authors need to ...</span>
           </div>
           <div role="row">
-            <div role="gridcell"><h5>
+            <div role="gridcell"><h5 class="ex3_result_header">
                 <a tabindex="-1" href="https://www.w3.org/TR/WCAG20-TECHS/aria#ARIA11">Using
                   ARIA landmarks to identify regions of a page - WCAG WG - W3C</a>
               </h5></div> <span tabindex="-1" role="gridcell">World Wide Web Consortium</span> <span
@@ -360,6 +363,10 @@
           </div>
         </div>
 
+        <div class="ex3_pagination">
+          <button disabled="true" id="ex3_pageup_button">Previous</button>
+          <button id="ex3_pagedown_button">Next</button>
+        </div>
       </div>
       <div role="separator" id="ex3_end_sep" aria-labelledby="ex3_end_sep ex3_label" aria-label="End of"></div>
       <h4>Notes</h4>
